add delete blogs request in api
